# GalaxiaStarCommunicators

./: ACCESSIBILITY.md  CMakeLists.txt  LIVESTREAM_SETUP.md  README-cpp.md  README.md  bottom-controls.html  extension  galaxia_star_communicators.html  index.html  launch  manifest.webmanifest  server.js  service-worker.js  settings  task
a11y/: index.html
app/: chat.html
imessage-dms/: index.html  styles.css
include/galaxia/: Communicator.h
js/: announce.js
livestream/: index.html
protected-rooms/: server.js
prototypes/: README.md
prototypes/meet-embed/: README.md
prototypes/meet-embed/client/: index.html
prototypes/signaling-server/: package.json  server.js
prototypes/skype-group/client/: app.js  index.html  styles.css
prototypes/teams-1to1/client/: app.js  index.html  styles.css
public/components/: whatsapp-dms-list.html
src/: Communicator.cpp  main.cpp
styles/: focus.css  visually-hidden.css
tests/: test_basic.cpp
